# PH-SHOWOA

./: .gitignore  ENGINEERING_CHANGELOG.md  IMPLEMENTATION_CHECKLIST.md  README.md  pyproject.toml  tunnel_runner.py
scripts/: benchmark_cpp.py  compare_with_paper.py  compare_with_paper_logged.py  kaggle_run.py
src/: __main__.py  argparse_util.py  compute_backend.py  config.py  data.py  eval.py  main.py  move.py  operator.py  search_framework.py  solution.py  state.py  util.py
src_cpp/: CMakeLists.txt  compute_backend.cpp  compute_backend.cu  compute_backend.h  data.cpp  data.h  main.cpp  move.h  operator.cpp  operator.h  search_framework.cpp  search_framework.h  solution.h
tests/: paper_performance_targets.csv  test_compute_backend.py  test_paper_performance.py
utils/: check_cuda.py  paper_converter.py
