[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vrpenstein"
version = "0.1.0"
description = "PH-SHOWOA for VRPSPDTW"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
cuda = ["numba>=0.60"]

[project.scripts]
ph-showoa = "src.__main__:main"
vrpenstein = "src.__main__:main"
